add downloader for synchronizer

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -6,3 +6,10 @@ server:
     - 9000
     - 3000
   demonize: false
+synchronizer:
+  api_key: g72HTAiD7ysCjtBxgRpf
+  protocol: https
+  hostname: destinationbook-testing.herokuapp.com
+  uri:
+    trips: export/trips
+    wallet: export
