--- a/bin/db_puma.service
+++ b/bin/db_puma.service
@@ -11,6 +11,8 @@ RestartSec=10                       # Restart service after 10 seconds if node s
 StandardOutput=syslog               # Output to syslog
 StandardError=syslog                # Output to syslog
 SyslogIdentifier=jpm
+User=jpm
+Group=jpm
 
 [Install]
 WantedBy=multi-user.target
